[package]
name = "sshelf"
version = "0.10.0"
edition = "2024"
rust-version = "1.88"
description = "Fast terminal UI for your SSH hosts: fuzzy-search and connect, transfer files over SFTP, and run background port forwards — keeps its own host database and never edits ~/.ssh/config."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["ssh", "tui", "ssh-client", "sftp", "terminal"]
categories = ["command-line-utilities"]
repository = "https://github.com/max-rh/sshelf"
homepage = "https://max-rh.github.io/sshelf"
# Keep the published crate lean: build/docs/CI infrastructure isn't needed to `cargo install`.
exclude = [".github/", "docs/", "examples/", "book.toml", "dist-workspace.toml"]

[dependencies]
age = "0.10"
anyhow = "1.0.102"
arboard = { version = "3.6.1", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.5", features = ["unstable-dynamic"] }
clap_mangen = "0.3.0"
etcetera = "0.11.0"
keyring = "3"  # backend enabled per-target below
nucleo-matcher = "0.3.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shlex = "2.0.1"
ssh2-config = "0.7.1"
thiserror = "2.0.18"
toml = "1.1.2"
ulid = "1.2.1"
zeroize = "1.8.2"

# Platform-native keyring backends (Keychain / Secret Service).
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

# Pure-Rust Secret Service (zbus) — no libdbus/OpenSSL/tokio C build deps.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["async-secret-service", "crypto-rust", "async-io"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Debian/Ubuntu package metadata (used by `cargo deb`). Completions + man page are generated
# in CI (see .github/workflows/release-deb.yml) and shipped via the asset paths below.
[package.metadata.deb]
# Shipped publicly in every .deb — this is a dedicated public alias, not a personal inbox.
maintainer = "max-rh <max-rh@mail.com>"
copyright = "2026, sshelf contributors"
license-file = ["LICENSE-MIT", "0"]
extended-description = """
A terminal UI for managing and connecting to SSH hosts. Saves each host once and generates
the correct ssh command — it never reads or edits ~/.ssh/config (except a read-only import)."""
section = "utils"
priority = "optional"
# $auto resolves libc; we exec ssh, and recommend a Secret Service daemon (the age vault is a
# fallback, so it's a Recommends not a Depends).
depends = "$auto, openssh-client"
recommends = "gnome-keyring"
assets = [
    ["target/release/sshelf", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/sshelf/README.md", "644"],
    ["SECURITY.md", "usr/share/doc/sshelf/SECURITY.md", "644"],
    ["dist-extra/sshelf.bash", "usr/share/bash-completion/completions/sshelf", "644"],
    ["dist-extra/_sshelf", "usr/share/zsh/vendor-completions/_sshelf", "644"],
    ["dist-extra/sshelf.fish", "usr/share/fish/vendor_completions.d/sshelf.fish", "644"],
    ["dist-extra/sshelf.1", "usr/share/man/man1/sshelf.1", "644"],
]

# RedHat/Fedora .rpm metadata (used by `cargo generate-rpm`). The .rpm is built as a **static
# musl** binary in .github/workflows/release-rpm.yml so it runs on any RPM distro regardless of
# glibc; `cargo generate-rpm --target <triple>` rewrites the `target/release` asset paths below to
# the per-target dir. Completions + man page are generated in CI, same as the .deb.
[package.metadata.generate-rpm]
# A static binary has no shared-library deps; don't let auto-req add bogus glibc `Requires`.
auto-req = "no"
summary = "Fast terminal UI for managing and connecting to SSH hosts"
assets = [
    { source = "target/release/sshelf", dest = "/usr/bin/sshelf", mode = "0755" },
    { source = "README.md", dest = "/usr/share/doc/sshelf/README.md", mode = "0644", doc = true },
    { source = "SECURITY.md", dest = "/usr/share/doc/sshelf/SECURITY.md", mode = "0644", doc = true },
    { source = "LICENSE-MIT", dest = "/usr/share/licenses/sshelf/LICENSE-MIT", mode = "0644", doc = true },
    { source = "LICENSE-APACHE", dest = "/usr/share/licenses/sshelf/LICENSE-APACHE", mode = "0644", doc = true },
    { source = "dist-extra/sshelf.bash", dest = "/usr/share/bash-completion/completions/sshelf", mode = "0644" },
    { source = "dist-extra/_sshelf", dest = "/usr/share/zsh/site-functions/_sshelf", mode = "0644" },
    { source = "dist-extra/sshelf.fish", dest = "/usr/share/fish/vendor_completions.d/sshelf.fish", mode = "0644" },
    { source = "dist-extra/sshelf.1", dest = "/usr/share/man/man1/sshelf.1", mode = "0644" },
]

# We exec ssh; everything else (Secret Service, age vault) is bundled or optional.
[package.metadata.generate-rpm.requires]
openssh-clients = "*"
